--- a/src/AzGitOps/AzGitOps.csproj
+++ b/src/AzGitOps/AzGitOps.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="Azure.Core" Version="1.33.0" />
     <PackageReference Include="Azure.Identity" Version="1.9.0" />
     <PackageReference Include="Azure.ResourceManager" Version="1.6.0" />
+    <PackageReference Include="Azure.Storage.Blobs" Version="12.17.0" />
     <PackageReference Include="Microsoft.Azure.Management.ResourceManager" Version="3.17.4-preview" />
     <PackageReference Include="Microsoft.Azure.WebJobs.Extensions.Storage" Version="5.1.3" />
     <PackageReference Include="Microsoft.Azure.WebJobs.Extensions.Storage.Blobs" Version="5.1.3" />
