--- a/src/AzGitOps/appsettings.Development.json
+++ b/src/AzGitOps/appsettings.Development.json
@@ -1,14 +1,7 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Host.Singleton": "Debug"
-    }
-  },
   "AzureWebJobsStorage": "UseDevelopmentStorage=true",
   "EventsQueue": "UseDevelopmentStorage=true",
-  "GenevaMetricsOptions": {
-    "MetricAccountName": "Development",
-    "MetricNamespace": "Development",
-    "Geography": "Moon"
-  }
+  "ExcludeAzureCliCredential": true,
+  "ExcludeManagedIdentityCredential": true,
+  "ExcludeInteractiveBrowserCredential": true
 }
