--- a/src/AzGitOps/appsettings.Development.json
+++ b/src/AzGitOps/appsettings.Development.json
@@ -3,5 +3,6 @@
   "EventsQueue": "UseDevelopmentStorage=true",
   "ExcludeAzureCliCredential": true,
   "ExcludeManagedIdentityCredential": true,
-  "ExcludeInteractiveBrowserCredential": true
+  "ExcludeInteractiveBrowserCredential": true,
+  "ResourceProviderEndpoint": "http://localhost:5000"
 }
